--- a/ALLABOUTME/index.html
+++ b/ALLABOUTME/index.html
@@ -54,6 +54,14 @@
         </article>
     </main>
 
+    <div>
+        Lorem ipsum dolor sit amet,
+        consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua.
+        </div>
+        
+
     <hr>
 
     <footer>
