--- a/ALLABOUTME/index.html
+++ b/ALLABOUTME/index.html
@@ -26,7 +26,7 @@
 
     <main>
         <article id="myself">
-            <h1>About Myself</h1>
+            <h1>Basic Information</h1>
             <p>I am a hard-working and driven individual who isn't afraid to face a challenge. I'm passionate about my work and I know how to get the job done. I would describe myself as an open and honest person who doesn't believe in misleading other people and tries to be fair in everything I do.</p>
             <img src="Image/me.jpg" alt="Reginald" height="200" width="200">
         </article>
@@ -54,13 +54,6 @@
         </article>
     </main>
 
-    <div>
-        Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit,
-        sed do eiusmod tempor incididunt
-        ut labore et dolore magna aliqua.
-        </div>
-        
 
     <hr>
 
